fix: different colors for dark mode

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,5 +1,8 @@
 /* color */
 :root {
-  --single-code-color: #c1798b;
-  --single-code-bg-color: #f9f2f4;
+  --code-color: #c1798b;
+  --code-bg-color: #f9f2f4;
+  --code-bg-color-dark: #35262a;
+  --pre-bg-color: #f4f7f8;
+  --pre-bg-color-dark: #232428;
 }
